<resources>
    <string name="app_name">Сумо</string>
    <string name="role1">Хакухо Сё</string>
    <string name="role2"> Такамияма</string>
    <string name="rating_st">Счёт</string>
    <string name="Gol">Удар</string>
    <string name="times">00:00</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="round">0</string>
    <string name="roundText">Первый раунд</string>
    <string name="startText">Начать игру</string>

</resources>
