<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/japan_flag"
    tools:context="com.example.algoritm.lab_2_vll_sem.gameActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_horizontal"
        android:columnCount="2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/timer"
            android:text="@string/times"
            android:textSize="45sp"
            android:textColor="@color/Red"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            />


        <TextView
            android:id="@+id/role_name1"
            android:text="@string/role1"
            android:textSize="25sp"
            android:layout_column="0"
            android:gravity="center"
            android:textColor="@color/Black"
            android:layout_width="190dp"
            android:layout_marginTop="18dp"/>

        <TextView
        android:id="@+id/role_name2"
        android:text="@string/role2"
            android:textSize="25sp"
            android:textColor="@color/Black"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="190dp"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/rating_st"
            android:text="@string/rating_st"
            android:textSize="27sp"
            android:textColor="@color/Black"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/rating_id1"
            android:text="@string/score1"
            android:textSize="40sp"
            android:textColor="@color/Red"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="55dp"
             />

        <TextView
            android:id="@+id/rating_id2"
            android:text="@string/score2"
            android:textColor="@color/Red"
            android:textSize="40sp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_marginTop="55dp"/>

        <Button
            android:id="@+id/gol_2"
            android:text="@string/Gol"
            android:textColor="@color/Black"
            android:background="@color/White1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:onClick="plusFist"
            android:layout_width="125dp" />

        <Button
            android:id="@+id/gol_1"
            android:text="@string/Gol"
            android:textColor="@color/Black"
            android:background="@color/White1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:onClick="plusSecond"
            android:layout_width="125dp" />
        <!-- android:layout_marginTop="80dp"-->
        />

        <TextView
            android:id="@+id/roundText"
            android:text="@string/roundText"
            android:textSize="27sp"
            android:textColor="@color/Red"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            />

        <Button
            android:id="@+id/start"
            android:text="@string/startText"
            android:textColor="@color/Black"
            android:background="@color/White1"
            android:gravity="center"
            android:layout_columnSpan="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_row="5"
            android:onClick="startGame"
            android:layout_width="125dp"
            android:layout_marginTop="10dp">

        </Button>

    </GridLayout>

</RelativeLayout>
